Feedback bug fixes (#79)
* Fixed feedback tab not showing in test

* built character count into text input

* Added ios zoom fix to location auto

* Fixed local storage item being set on email error

--- a/src/components/FieldTextInput/FieldTextInput.module.css
+++ b/src/components/FieldTextInput/FieldTextInput.module.css
@@ -29,3 +29,7 @@
 .error {
   color: var(--failColor);
 }
+
+.characterCount {
+  composes: marketplaceTinyFontStyles from global;
+}
