--- a/src/forms/EditListingCaregiverDetailsForm/EditListingCaregiverDetailsForm.module.css
+++ b/src/forms/EditListingCaregiverDetailsForm/EditListingCaregiverDetailsForm.module.css
@@ -57,7 +57,3 @@
   composes: formMargins;
   flex-shrink: 0;
 }
-
-.characterCount {
-  composes: marketplaceTinyFontStyles from global;
-}
